# altiez

./: .env.example  .flake8  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  README.md  automations.py  cliff.toml  install.sh  main.py  pyproject.toml  requirements-dev.txt  run.py  utils.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: commitlint.yml  contributors.yml  lint.yml  release.yml
altissia_bot/: __init__.py  automations.py  constants.py  main.py  utils.py
docs/: CHANGELOG.md  CONTRIBUTORS.md
scripts/: install.sh
tests/: test_automations.py  test_utils.py
